name:                cpgv
version:             0.1.0.0
synopsis:            A small interpreter for Wadler's language CP and GV.
description:         Please see README.md
homepage:            https://github.com/jgbm/cpgv
author:              Garrett Morris
maintainer:          garrett.morris@gmail.com
copyright:           2016 Garrett Morris
category:            Language
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      .
  build-depends:       array     >= 0.5 && < 0.6
                     , base      >= 4.0 && < 5.0
                     , haskeline >= 0.7 && < 0.8
                     , mtl       >= 2.2 && < 3.0
                     , syb       >= 0.6 && < 0.7
                     , wl-pprint >= 1.2 && < 2.0
  build-tools:         alex, happy                     
  exposed-modules:     CP.Check
                     , CP.Expand
                     , CP.Norm
                     , CP.Printer
                     , CP.Lexer
                     , CP.Syntax
                     , CP.Parser
                     , CP.Trace
                     , CP.Utilities
                     , CPToGV
                     , GV.Check
                     , GV.CPBuilder
                     , GV.Printer
                     , GV.Run
                     , GV.Scope
                     , GV.Lexer
                     , GV.Syntax
                     , GV.Parser
                     , GVToCP
  default-language:    Haskell2010                     

  
executable cpi
  hs-source-dirs:      .
  main-is:             CPI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       cpgv      == 0.1.0.0
                     , array     >= 0.5 && < 0.6
                     , base      >= 4.0 && < 5.0
                     , haskeline >= 0.7 && < 0.8
                     , mtl       >= 2.2 && < 3.0
                     , syb       >= 0.6 && < 0.7
                     , wl-pprint >= 1.2 && < 2.0
  other-modules:       CP.Lexer
                     , CP.Parser
                     , GV.Lexer
                     , GV.Parser
                     , CP.Check
                     , CP.Expand
                     , CP.Norm
                     , CP.Printer
                     , CP.Syntax
                     , CP.Trace
                     , CP.Utilities
                     , CPToGV
                     , GV.CPBuilder
                     , GV.Check
                     , GV.Printer
                     , GV.Syntax                     
  default-language:    Haskell2010

  
executable gvi
  hs-source-dirs:      .
  main-is:             GVI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       cpgv      == 0.1.0.0
                     , array     >= 0.5 && < 0.6
                     , base      >= 4.0 && < 5.0
                     , haskeline >= 0.7 && < 0.8
                     , mtl       >= 2.2 && < 3.0
                     , syb       >= 0.6 && < 0.7
                     , wl-pprint >= 1.2 && < 2.0
  other-modules:       CP.Lexer
                     , CP.Parser
                     , GV.Lexer
                     , GV.Parser
                     , CP.Check
                     , CP.Expand
                     , CP.Norm
                     , CP.Printer
                     , CP.Syntax
                     , CP.Trace
                     , CP.Utilities
                     , GV.CPBuilder
                     , GV.Check
                     , GV.Printer
                     , GV.Run
                     , GV.Scope
                     , GV.Syntax
                     , GVToCP                     
  default-language:    Haskell2010

  
source-repository head
  type:     git
  location: https://github.com/jgbm/cpgv
